--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,14 @@ img {
   justify-content: space-evenly;
 }
 
+.activeproject {
+  background-color: aquamarine;
+  color: #232323;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
 main {
   background-color: #232323;
   display: flex;
@@ -54,14 +62,24 @@ aside {
 
 li {
   list-style: none;
+  gap: 5px;
+  align-items: center;
+}
+
+ul {
+  padding: 0;
 }
 
 .project-item {
   display: flex;
+  margin: 10px 0 10px 0;
+  padding: 10px;
+  justify-content: space-between;
 }
 
 .task-container {
   display: flex;
+  flex-flow: row wrap;
   gap: 10px;
   width: 100%;
   justify-content: space-evenly;
@@ -69,4 +87,19 @@ li {
 
 #addTaskBtn {
   margin-bottom: 30px;
+}
+
+button {
+  border-radius: 5px;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  transform: scale(1.1);
+  transition: all 0.2s ease-in-out;
+  background-color: #232323;
+  color: aquamarine;
+  border-radius: 5px;
+  cursor: pointer;
 }
